--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,10 +56,16 @@
             android:id="@+id/imageViewLog"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginTop="80dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginRight="5dp"
+            app:layout_constraintEnd_toStartOf="@+id/etName"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_baseline_account_box_24"
-            tools:layout_editor_absoluteX="14dp" />
+            tools:ignore="VectorDrawableCompat" />
 
     <ImageView
             android:id="@+id/imageViewPass"
@@ -70,6 +76,7 @@
             android:layout_marginTop="80dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageViewLog"
-            app:srcCompat="@drawable/ic_baseline_https_24" />
+            app:srcCompat="@drawable/ic_baseline_https_24"
+            tools:ignore="VectorDrawableCompat" />
 
 </android.support.constraint.ConstraintLayout>
